update LeetCode solution - Design

--- a/algorithm/LeetCode/[Hard] 1172. Dinner Plate Stacks.md
+++ b/algorithm/LeetCode/[Hard] 1172. Dinner Plate Stacks.md
@@ -61,3 +61,257 @@ D.pop()            // Returns -1.  There are still no stacks.
 
 # Submissions
 ---
+**Solution 1: (Array, Heap)**
+```
+Runtime: 912 ms
+Memory Usage: 72.4 MB
+```
+```python
+class DinnerPlates:
+    # index * cap ->  access start of stack at index
+    # index * cap + (cap - 1)  -> access last element of stack at index
+
+    def __init__(self, capacity: int):
+        self.stack = [] # just one array to simulate all the stacks
+        self.cap = capacity 
+        self.idx = [] # min-heap to track empty indicies
+
+    def push(self, val: int) -> None:
+        if len(self.idx) > 0:
+            while len(self.idx) > 0:
+                i = heappop(self.idx) 
+                # Given that we just push index but don't validate the cache while
+                # poping we need to check if this index is within current limits
+                if i < len(self.stack):
+                    self.stack[i] = val
+                    return 
+                
+        # we didn't find empty spaces so we add to the end
+        self.stack.append(val)
+
+    def pop(self) -> int:
+        n = len(self.stack) - 1
+        if n < 0:
+            return -1
+        
+        while n > -1:
+            if self.stack[n] != -1:
+                v = self.stack[n]
+                self.stack[n] = -1
+                # Add the empty index to the heap
+                heappush(self.idx , n)
+                return v
+            else:
+                # Because those appear at the end the list we free those memory spaces so
+                # later pop operations are optimized
+                del(self.stack[n])
+            n -= 1
+            
+        # All stacks are empty
+        return -1
+
+    def popAtStack(self, index: int) -> int:
+        # additional check that is [optional] just to skip any effort 
+        # if index is already out of current limits
+        count = len(self.stack) // self.cap
+        if index > count:
+            return -1
+        
+        # capture the boundaries of this stack
+        leftptr = (index * self.cap) 
+        rightptr = leftptr + self.cap - 1
+        if rightptr > (len(self.stack) - 1): # edge case
+            rightptr = (len(self.stack) - 1)
+            
+        # traverse within the stack at this index until we empty it or we find an occupied location    
+        while self.stack[rightptr] == -1 and rightptr >= leftptr:
+            rightptr -=1
+            
+        # if it isn't empty it means we found occupied position
+        if rightptr >= leftptr:
+            v = self.stack[rightptr]
+            self.stack[rightptr] = -1
+            # Add the empty index to the heap
+            heappush(self.idx , rightptr)
+            return v
+        else:
+            return -1
+
+
+# Your DinnerPlates object will be instantiated and called as such:
+# obj = DinnerPlates(capacity)
+# obj.push(val)
+# param_2 = obj.pop()
+# param_3 = obj.popAtStack(index)
+```
+
+**Solution 2: (Array, Stack)**
+
+1. Maintain a list of lists
+1. Maintain head, tail variables containing the indexes of the next push, and the next pop
+1. When popAtStack is encountered, use _seek_ methods to locate the head and tail variables
+
+class DinnerPlates(object):
+
+```
+Runtime: 1272 ms
+Memory Usage: 75.3 MB
+```
+```python
+class DinnerPlates:
+    # index * cap ->  access start of stack at index
+    # index * cap + (cap - 1)  -> access last element of stack at index
+
+    def __init__(self, capacity: int):
+        self.arr = [[]] # array of stacks
+        self.capacity = capacity
+        self.head = 0 # leftmost unfilled array index
+        self.tail = 0 # righmost non-empty array index
+
+    def _seek_tail(self):
+        while self.tail > 0 and not self.arr[self.tail]:
+            self.tail -= 1
+
+    def _seek_head(self):
+        while self.head < len(self.arr) and \
+            len(self.arr[self.head]) == self.capacity:
+            self.head += 1
+
+    def _seek_head_back(self):
+        while self.head > 0 and \
+            len(self.arr[self.head]) == self.capacity:
+            self.head -= 1    
+    
+    def push(self, val: int) -> None:
+        if self.capacity == 0: return
+
+        self.arr[self.head].append(val)
+        self.tail = max(self.head, self.tail)
+        
+        if len(self.arr[self.head]) == self.capacity:
+            self._seek_head()
+            if len(self.arr) == self.head:
+                self.arr.append([])
+
+    def pop(self) -> int:
+        if self.capacity == 0: return -1
+        
+        if self.arr[self.tail]:
+            val = self.arr[self.tail].pop()
+            self._seek_tail()
+            return val
+        else:
+            return -1
+
+    def popAtStack(self, index: int) -> int:
+        if index == self.tail and index < self.head:
+            val = self.arr[index].pop()
+            self._seek_tail()
+            self._seek_head_back()
+            return val
+
+        if index < self.head:
+            val = self.arr[index].pop()
+            self.head = index
+            return val
+        if index == self.tail:
+            val = self.arr[index].pop()
+            self._seek_tail()
+            return val
+        if index < len(self.arr) and self.arr[index]:
+            return self.arr[index].pop()
+        return -1
+
+
+
+# Your DinnerPlates object will be instantiated and called as such:
+# obj = DinnerPlates(capacity)
+# obj.push(val)
+# param_2 = obj.pop()
+# param_3 = obj.popAtStack(index)
+```
+
+**Solution 3: (Heap)**
+```
+Runtime: 1988 ms
+Memory Usage: 468.1 MB
+```
+```c++
+class DinnerPlates {
+    // The trick is to quickly figure a way for leftmost vacant stack,
+    // meanwhile the rightmost non-empty stack is alway at the back of the stack vector.
+    // Data structure: 
+    //   - use a list of stacks to store all dinner plate stacks; 
+    //   - and a min heap (priority queue) to track vacant stack indices.
+    
+    int cap;  // capacity
+    vector<stack<int>> stacks;
+    priority_queue<int, vector<int>, ::greater<int>> vacants_left; // min heap to track the index of the vacant stacks 
+    
+public:
+    DinnerPlates(int capacity)
+    : cap(capacity)
+    {
+        vacants_left.push(0); // 0 index to start with
+        stacks.push_back({});
+    }
+    
+    void push(int val) {
+        // Clean up invalid vacant stack indices 
+        while(!vacants_left.empty() && vacants_left.top() >= stacks.size())
+            vacants_left.pop();
+
+        // Check if we need to add a new stack or not
+        if (vacants_left.empty())        
+        {
+            stacks.push_back({});
+            vacants_left.push(stacks.size() - 1);
+        }
+        
+        int idx = vacants_left.top(); 
+        while(!vacants_left.empty() && vacants_left.top() == idx)
+            // We remove all the duplicates here, because popAtStack() blindly push as if a new vacant stack each time.
+            vacants_left.pop();  // We will push back in conditionally
+
+        stacks[idx].push(val);
+        if (stacks[idx].size() < cap)
+            vacants_left.push(idx);
+    }
+    
+    int pop() {
+        if (stacks.empty())
+            return -1;
+        
+        // the rightmost non-empty stack is always at the back of vector.
+        int ans = stacks.back().top();
+        stacks.back().pop();
+        while (!stacks.empty() && stacks.back().empty())
+            stacks.pop_back(); // clean up empty stacks at the back of vector.
+        
+        return ans;
+    }
+    
+    int popAtStack(int index) {
+        // index validity check
+        if (index >= stacks.size() || stacks[index].empty())
+            return -1;
+        
+        int ans = stacks[index].top();
+        stacks[index].pop();
+
+        while (!stacks.empty() && stacks.back().empty()) 
+            stacks.pop_back();  // same idea as pop(), every time we pop, we clean up all empty stacks at the back.
+
+        vacants_left.push(index); // we allow duplicates (will be handled in push); this index is pused in as a new vacant stack;        
+        return ans;
+    }
+};
+
+/**
+ * Your DinnerPlates object will be instantiated and called as such:
+ * DinnerPlates* obj = new DinnerPlates(capacity);
+ * obj->push(val);
+ * int param_2 = obj->pop();
+ * int param_3 = obj->popAtStack(index);
+ */
+```
