--- a/algorithm/LeetCode/[Hard] 1206. Design Skiplist.md
+++ b/algorithm/LeetCode/[Hard] 1206. Design Skiplist.md
@@ -46,3 +46,166 @@ skiplist.search(1);   // return false, 1 has already been erased.
 
 # Submissions
 ---
+**Solution 1: (Design, Node)**
+```
+Runtime: 864 ms
+Memory Usage: 21.1 MB
+```
+```python
+class Node(object): 
+    def __init__(self,val): self.val,self.next, self.down = val, None, None
+
+class Skiplist:
+
+    def __init__(self):
+        levels = 30
+        self.heads = [Node(-float('inf')) for _ in range(levels)]
+        for c,n in zip(self.heads, self.heads[1:]): c.down = n
+
+    def search(self, target: int) -> bool:
+        cur = self.heads[0]
+        while(cur):
+            if cur.next is None or cur.val < target <= cur.next.val:
+                if cur.next and target == cur.next.val: return True
+                cur = cur.down
+            else: cur = cur.next
+        return False
+    
+    def add(self, num: int) -> None:
+        stack,cur,prev = collections.deque([]),self.heads[0], None
+        while(cur):
+            if cur.next is None or cur.val < num  <= cur.next.val:
+                stack.append(cur)
+                cur = cur.down
+            else: cur = cur.next
+        while(stack):
+            cur = stack.pop()
+            node = Node(num)
+            node.next,cur.next = cur.next, node
+            if prev: node.down = prev
+            prev = node
+            if random.randint(0,len(self.heads)-1) < len(self.heads) -1 : break
+
+    def erase(self, num: int) -> bool:
+        b,cur = False,self.heads[0]
+        while(cur):
+            if cur.next is None or cur.val < num <= cur.next.val:
+                if cur.next and cur.next.val == num:  b,cur.next = True,cur.next.next
+                cur = cur.down
+            else: cur = cur.next   
+        return b
+
+# Your Skiplist object will be instantiated and called as such:
+# obj = Skiplist()
+# param_1 = obj.search(target)
+# obj.add(num)
+# param_3 = obj.erase(num)
+```
+
+**Solution 2: (Design, Node)**
+
+* Borrow idea from leveldb: https://github.com/google/leveldb/blob/master/db/skiplist.h#L42
+* The key idea is to let the level distribution satisfy the Geometric distribution.
+* more detail please see the article: https://www.qtmuniao.com/2020/07/03/leveldb-data-structures-skip-list/#more
+
+```
+Runtime: 160 ms
+Memory Usage: 29.4 MB
+```
+```c++
+class Skiplist {
+private:
+    const int kMaxHeight = 8;
+    
+    struct Node {
+        int val;
+        int height;
+        Node** next;
+        
+        Node(int v, int h) {
+            val = v;
+            height = h;
+            next = new Node*[h];
+            while (--h >= 0) next[h] = nullptr;
+        }
+        
+        ~Node() {
+           delete [] next;
+        }
+    };
+    
+    int getRandomHeight() {
+        int h = 1;
+        while (h < kMaxHeight && rand() % 4 == 1) ++h;
+        
+        return h;
+    }
+    
+    
+    Node* findGreaterOrEqual(int target, Node** prev) {
+        Node* it = head;
+        int level = kMaxHeight-1;
+        while (true) {
+            Node* next = it->next[level];
+            if (next && next->val < target) {
+                it = next;
+            } else {
+                if (prev)  prev[level] = it;
+                
+                if (level == 0) {
+                    return next;
+                } else {
+                    --level;
+                }
+            }
+        }
+    }
+    
+    
+    Node* head;
+public:
+    
+    Skiplist() {
+        head = new Node(0, kMaxHeight);
+    }
+    
+    bool search(int target) {
+        Node* node = findGreaterOrEqual(target, nullptr);
+        return node != nullptr && node->val == target;
+    }
+    
+    void add(int num) {
+        Node* prev[kMaxHeight];
+        findGreaterOrEqual(num, prev);
+        
+        Node* node = new Node(num, getRandomHeight());  
+        for (int i = 0; i < node->height; ++i) {
+            node->next[i] = prev[i]->next[i];
+            prev[i]->next[i] = node;
+        }
+    }
+    
+    bool erase(int num) {
+        Node* prev[kMaxHeight];
+        Node* to_del = findGreaterOrEqual(num, prev);
+        if (to_del == nullptr || to_del->val != num) {
+            return false;
+        }
+        
+        for (int i = 0; i < to_del->height; ++i) {
+            prev[i]->next[i] = to_del->next[i];
+        }
+        
+        delete to_del;
+        return true;
+    }
+};
+
+/**
+ * Your Skiplist object will be instantiated and called as such:
+ * Skiplist* obj = new Skiplist();
+ * bool param_1 = obj->search(target);
+ * obj->add(num);
+ * bool param_3 = obj->erase(num);
+ */
+```
