update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Easy] 1022. Sum of Root To Leaf Binary Numbers.md
+++ b/algorithm/LeetCode/[Easy] 1022. Sum of Root To Leaf Binary Numbers.md
@@ -25,7 +25,132 @@ Explanation: (100) + (101) + (110) + (111) = 4 + 5 + 6 + 7 = 22
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (Iterative Preorder Traversal)**
+```
+Runtime: 32 ms
+Memory Usage: 13.8 MB
+```
+```python
+# Definition for a binary tree node.
+# class TreeNode:
+#     def __init__(self, x):
+#         self.val = x
+#         self.left = None
+#         self.right = None
+
+class Solution:
+    def sumRootToLeaf(self, root: TreeNode) -> int:
+        root_to_leaf = 0
+        stack = [(root, 0) ]
+        
+        while stack:
+            root, curr_number = stack.pop()
+            if root is not None:
+                curr_number = (curr_number << 1) | root.val
+                # if it's a leaf, update root-to-leaf sum
+                if root.left is None and root.right is None:
+                    root_to_leaf += curr_number
+                else:
+                    stack.append((root.right, curr_number))
+                    stack.append((root.left, curr_number))
+                        
+        return root_to_leaf
+```
+
+**Solution 2: (Recursive Preorder Traversal)**
+```
+Runtime: 28 ms
+Memory Usage: 14.1 MB
+```
+```python
+# Definition for a binary tree node.
+# class TreeNode:
+#     def __init__(self, x):
+#         self.val = x
+#         self.left = None
+#         self.right = None
+
+class Solution:
+    def sumRootToLeaf(self, root: TreeNode) -> int:
+        def preorder(r, curr_number):
+            nonlocal root_to_leaf
+            if r:
+                curr_number = (curr_number << 1) | r.val
+                # if it's a leaf, update root-to-leaf sum
+                if not (r.left or r.right):
+                    root_to_leaf += curr_number
+                    
+                preorder(r.left, curr_number)
+                preorder(r.right, curr_number) 
+        
+        root_to_leaf = 0
+        preorder(root, 0)
+        return root_to_leaf
+```
+
+**Solution 3: (Morris Preorder Traversal)**
+```
+Runtime: 36 ms
+Memory Usage: 14 MB
+```
+```python
+# Definition for a binary tree node.
+# class TreeNode:
+#     def __init__(self, x):
+#         self.val = x
+#         self.left = None
+#         self.right = None
+
+class Solution:
+    def sumRootToLeaf(self, root: TreeNode) -> int:
+        root_to_leaf = curr_number = 0
+        
+        while root:  
+            # If there is a left child,
+            # then compute the predecessor.
+            # If there is no link predecessor.right = root --> set it.
+            # If there is a link predecessor.right = root --> break it.
+            if root.left: 
+                # Predecessor node is one step to the left 
+                # and then to the right till you can.
+                predecessor = root.left 
+                steps = 1
+                while predecessor.right and predecessor.right is not root: 
+                    predecessor = predecessor.right 
+                    steps += 1
+
+                # Set link predecessor.right = root
+                # and go to explore the left subtree
+                if predecessor.right is None:
+                    curr_number = (curr_number << 1) | root.val                    
+                    predecessor.right = root  
+                    root = root.left  
+                # Break the link predecessor.right = root
+                # Once the link is broken, 
+                # it's time to change subtree and go to the right
+                else:
+                    # If you're on the leaf, update the sum
+                    if predecessor.left is None:
+                        root_to_leaf += curr_number
+                    # This part of tree is explored, backtrack
+                    for _ in range(steps):
+                        curr_number >>= 1
+                    predecessor.right = None
+                    root = root.right 
+                    
+            # If there is no left child
+            # then just go right.        
+            else: 
+                curr_number = (curr_number << 1) | root.val
+                # if you're on the leaf, update the sum
+                if root.right is None:
+                    root_to_leaf += curr_number
+                root = root.right
+                        
+        return root_to_leaf
+```
+
+**Solution 4: (DFS)**
 ```
 Runtime: 36 ms
 Memory Usage: 12.9 MB
@@ -42,13 +167,13 @@ class Solution:
     def sumRootToLeaf(self, root: TreeNode) -> int:
         def dfs(node, previous):
             if not node.left and not node.right:
-                yield 2*previous+node.val
+                yield 2*previous + node.val
 
             if node.left:
-                yield from dfs(node.left, 2*previous+node.val)
+                yield from dfs(node.left, 2*previous + node.val)
 
             if node.right:
-                yield from dfs(node.right, 2*previous+node.val)
+                yield from dfs(node.right, 2*previous + node.val)
 
         return sum(dfs(root, 0))
 ```
