update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Easy] 1009. Complement of Base 10 Integer.md
+++ b/algorithm/LeetCode/[Easy] 1009. Complement of Base 10 Integer.md
@@ -50,3 +50,16 @@ class Solution:
 
         return int(bN,2)
 ```
+
+**Solution 2: (Math)**
+
+A binary number plus its complement will equal 111....111 in binary. Also, N = 0 is a corner case.
+```
+Runtime: 24 ms
+Memory Usage: 14 MB
+```
+```python
+class Solution:
+    def bitwiseComplement(self, N: int) -> int:
+        return 2 ** (len(bin(N))-2)-1 - N
+```
