update LeetCode Weekly Contest 212

--- a/algorithm/LeetCode/[Hard] 1510. Stone Game IV.md
+++ b/algorithm/LeetCode/[Hard] 1510. Stone Game IV.md
@@ -51,9 +51,76 @@ Explanation: Alice can't win the game if Bob plays optimally.
 
 * `1 <= n <= 10^5`
 
+**Hint:**
+
+Use dynamic programming to keep track of winning and losing states. Given some number of stones, Alice can win if she can force Bob onto a losing state.
+
 # Submissions
 ---
-**Solution 1: (DP Bottom-Up)**
+**Solution 1: (DFS with memorization, DP Top-Down)**
+```
+Runtime: 1552 ms
+Memory Usage: 169.7 MB
+```
+```python
+class Solution:
+    def winnerSquareGame(self, n: int) -> bool:
+        
+        @lru_cache(maxsize=None)
+        def dfs(remain):
+            if remain == 0:
+                return False
+
+            sqrt_root = int(remain**0.5)
+            for i in range(1, sqrt_root+1):
+                # if there is any chance to make the opponent lose the game in the next round,
+                #  then the current player will win.
+                if not dfs(remain - i*i):
+                    return True
+
+            return False
+        
+        return dfs(n)
+```
+
+**Solution 2: (DP, DP Bottom-Up)**
+```
+Runtime: 1000 ms
+Memory Usage: 14.8 MB
+```
+```python
+class Solution:
+    def winnerSquareGame(self, n: int) -> bool:
+        dp = [False]*(n+1)
+        for i in range(1, n+1):
+            for k in range(1, int(i**0.5)+1):
+                if dp[i-k*k] == False:
+                    dp[i] = True
+                    break
+        return dp[n]
+```
+
+**Solution 3: (DP, DP Bottom-Up)**
+```
+Runtime: 232 ms
+Memory Usage: 14.9 MB
+```
+```python
+class Solution:
+    def winnerSquareGame(self, n: int) -> bool:
+        dp = [False]*(n+1)
+        for i in range(n+1):
+            if dp[i]:
+                continue
+            for k in range(1, int(n**0.5)+1):
+                if i+k*k <= n:
+                    dp[i+k*k] = True
+                else:
+                    break
+        return dp[n]
+```
+
+**Solution 4: (DP Bottom-Up)**
 
 **Explanation**
 
@@ -82,7 +149,7 @@ class Solution:
         return dp[-1]
 ```
 
-**Solution 2: (DP Bottom-Up)**
+**Solution 5: (DP Bottom-Up)**
 ```
 Runtime: 244 ms
 Memory Usage: 6.3 MB
@@ -105,22 +172,25 @@ public:
 };
 ```
 
-**Solution 3: (DP Top-Down)**
+**Solution 6: (DP Bottom-Up)**
+
+* First, calculate the possible moves (squares), then check if alice wins.
+* Alice wins when at least one of her moves always wins, consequently Bob loses when all of his counter-moves lose.
+
 ```
-Runtime: 312 ms
-Memory Usage: 22.6 MB
+Runtime: 800 ms
+Memory Usage: 23.2 MB
 ```
 ```python
 class Solution:
-    
-    @functools.lru_cache(None)
     def winnerSquareGame(self, n: int) -> bool:
-        if n == 0:
-            return False
-        i = int(math.sqrt(n))
-        while i >= 1:
-            if not self.winnerSquareGame(n - i * i):
-                return True
-            i -= 1
-        return False
+        squares = [i*i for i in range(int(n**0.5), 0, -1)]
+
+        @functools.lru_cache(None)
+        def alice_wins(stones=n, alice_plays=True):
+            if not stones: return not alice_plays
+            criterion = any if alice_plays else all
+            return criterion(alice_wins(stones - move, not alice_plays) for move in squares if stones >= move)
+
+        return alice_wins()
 ```
