update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Easy] 1446. Consecutive Characters.md
+++ b/algorithm/LeetCode/[Easy] 1446. Consecutive Characters.md
@@ -45,7 +45,30 @@ Output: 1
 
 # Submissions
 ---
-**Solution 1: (itertools)**
+**Solution 1: (One Pass)**
+```
+Runtime: 48 ms
+Memory Usage: 14.1 MB
+```
+```python
+class Solution:
+    def maxPower(self, s: str) -> int:
+        count = 0
+        max_count = 0
+        previous = None
+        for c in s:
+            if c == previous:
+                # if same as previous one, increase the count
+                count += 1
+            else:
+                # else, reset the count
+                previous = c
+                count = 1
+            max_count = max(max_count, count)
+        return max_count
+```
+
+**Solution 2: (itertools)**
 ```
 Runtime: 96 ms
 Memory Usage: 13.9 MB
@@ -56,7 +79,7 @@ class Solution:
         return max(len(list(g)) for k, g in itertools.groupby(s))
 ```
 
-**Solution 2: (Greedy)**
+**Solution 3: (Greedy)**
 ```
 Runtime: 68 ms
 Memory Usage: 13.9 MB
