update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Hard] 1659. Maximize Grid Happiness.md
+++ b/algorithm/LeetCode/[Hard] 1659. Maximize Grid Happiness.md
@@ -71,10 +71,10 @@ Now, let us fill out table element by element, using dp function:
 1. Compute R and C coordinates of our cell.
 1. Define neibs: it is parameters for our recursion: fist element is what we put into this element: 0, 1 or 2, second and third elements are new coordinates and last one is gain.
 1. Now, we have 3 possible cases we need to cover: new cell is filled with 0, 1 or 2 and for each of these cases we need to calculate ans:
-    1. a) this is dp for our previous row, shifted by one
-    1. b) gain we need to add when we add new intravert / extravert / empty
-    1. c) check right neighbor (if we have any) and add fine: for example if we have 2 introverts, both of them are not happy, so we need to add -30-30, if we have one introvert and one extravert, it is 20-30 and if it is two extraverts it is 20+20.
-    1. d) do the same for down neigbor if we have any (see illustration for help)
+    1. this is dp for our previous row, shifted by one
+    1. gain we need to add when we add new intravert / extravert / empty
+    1. check right neighbor (if we have any) and add fine: for example if we have 2 introverts, both of them are not happy, so we need to add -30-30, if we have one introvert and one extravert, it is 20-30 and if it is two extraverts it is 20+20.
+    1. do the same for down neigbor if we have any (see illustration for help)
 
 Finally, we just return dp(m*n-1, tuple([0]*n), I, E)
 
@@ -110,4 +110,54 @@ class Solution:
         if m < n: m, n = n, m
             
         return dp(m*n-1, tuple([0]*n), introvertsCount, extrovertsCount)
+```
+
+**Solution 2: (DP Top-Down)**
+```
+Runtime: 4092 ms
+Memory Usage: 47.6 MB
+```
+```python
+class Solution:
+    def getMaxGridHappiness(self, m: int, n: int, introvertsCount: int, extrovertsCount: int) -> int:
+        INTRO, EXTRO, LOSS, GAIN = 120, 40, -30, 20
+        INITIAL = {
+            " ": 0,
+            "i": INTRO,
+            "e": EXTRO
+        }
+
+        # on top of the initial happiness of c1 and c2, what's the additional happiness change if c1 and c2 are neighbors.
+        def getAdjustedHappiness(c1, c2):
+            c1, c2 = sorted([c1, c2])  # sort c1 c2 based on the order of [" ", "e", "i"], so that the following calculation can be simpler.
+            if c1 == " ":
+                return 0
+            if c1 == "e":
+                if c2 == "e": return GAIN + GAIN
+                if c2 == "i": return GAIN + LOSS
+            if c1 == "i":
+                return LOSS + LOSS
+            assert(False)
+
+        # dp returns the max happiness we can get from (0, 0) to (i, j)
+        @lru_cache(None)
+        def dp(visible_row, i, j, introvertsCount, extrovertsCount):
+            if introvertsCount == extrovertsCount == 0 or i < 0:
+                return 0
+
+            availables = [" "]    # possible values we can put in this cell, based on introvertsCount and extrovertsCount
+            if introvertsCount: availables.append("i")
+            if extrovertsCount: availables.append("e")
+
+            res = 0
+            visible_row = list(visible_row)
+            for value in availables:
+                cur_res = INITIAL[value] + getAdjustedHappiness(value, visible_row[j]) + getAdjustedHappiness(value, visible_row[j + 1])
+                tmp, visible_row[j] = visible_row[j], value
+                cur_res += dp(tuple(visible_row), i + ((j - 1) // n), (j - 1) % n, introvertsCount - int(value == "i"), extrovertsCount - int(value == "e"))
+                visible_row[j] = tmp
+                res = max(res, cur_res)
+            return res
+
+        return dp(" " * (n + 1), m - 1, n - 1, introvertsCount, extrovertsCount)
 ```
