--- a/algorithm/LeetCode/[Easy] 1010. Pairs of Songs With Total Durations Divisible by 60.md
+++ b/algorithm/LeetCode/[Easy] 1010. Pairs of Songs With Total Durations Divisible by 60.md
@@ -32,8 +32,27 @@ Explanation: All three pairs have a total duration of 120, which is divisible by
 ---
 **Solution 1:**
 ```
-Runtime: 240 ms
-Memory Usage: 16.5 MB
+Runtime: 232 ms
+Memory Usage: 18 MB
+```
+```python
+class Solution:
+    def numPairsDivisibleBy60(self, time: List[int]) -> int:
+        remainders = collections.defaultdict(int)
+        ret = 0
+        for t in time:
+            if t % 60 == 0: # check if a%60==0 && b%60==0
+                ret += remainders[0]
+            else: # check if a%60+b%60==60
+                ret += remainders[60-t%60]
+            remainders[t % 60] += 1 # remember to update the remainders
+        return ret
+```
+
+**Solution 1: (Counter)**
+```
+Runtime: 216 ms
+Memory Usage: 18.1 MB
 ```
 ```python
 class Solution:
