--- a/algorithm/LeetCode/[Hard] 1463. Cherry Pickup II.md
+++ b/algorithm/LeetCode/[Hard] 1463. Cherry Pickup II.md
@@ -58,26 +58,62 @@ Output: 4
 
 # Submissions
 ---
-**Solution 1: (DP Top-Down)**
+**Solution 1: (Dynamic Programming (Top Down))**
 ```
-Runtime: 1204 ms
-Memory Usage: 41.6 MB
+Runtime: 800 ms
+Memory Usage: 31.5 MB
 ```
 ```python
 class Solution:
     def cherryPickup(self, grid: List[List[int]]) -> int:
-        R, C = len(grid), len(grid[0])
-        
+        m = len(grid)
+        n = len(grid[0])
+
         @lru_cache(None)
-        def dp(r, c1, c2):
-            if r == R: return 0
-            cherries = grid[r][c1] if c1 == c2 else grid[r][c1] + grid[r][c2]
-            ans = 0
-            for nc1 in range(c1 - 1, c1 + 2):
-                for nc2 in range(c2 - 1, c2 + 2):
-                    if nc1 >= 0 and nc1 < C and nc2 >= 0 and nc2 < C:
-                        ans = max(ans, dp(r + 1, nc1, nc2))
-            return ans + cherries
-        
-        return dp(0, 0, C - 1)
+        def dp(row, col1, col2):
+            if col1 < 0 or col1 >= n or col2 < 0 or col2 >= n:
+                return -inf
+            # current cell
+            result = 0
+            result += grid[row][col1]
+            if col1 != col2:
+                result += grid[row][col2]
+            # transition
+            if row != m-1:
+                result += max(dp(row+1, new_col1, new_col2)
+                              for new_col1 in [col1, col1+1, col1-1]
+                              for new_col2 in [col2, col2+1, col2-1])
+            return result
+
+        return dp(0, 0, n-1)
+```
+
+**Solution 2: (Dynamic Programming (Bottom Up))**
+```
+Runtime: 1960 ms
+Memory Usage: 22.2 MB
+```
+```python
+class Solution:
+    def cherryPickup(self, grid: List[List[int]]) -> int:
+        m = len(grid)
+        n = len(grid[0])
+        dp = [[[0]*n for _ in range(n)] for __ in range(m)]
+
+        for row in reversed(range(m)):
+            for col1 in range(n):
+                for col2 in range(n):
+                    result = 0
+                    # current cell
+                    result += grid[row][col1]
+                    if col1 != col2:
+                        result += grid[row][col2]
+                    # transition
+                    if row != m-1:
+                        result += max(dp[row+1][new_col1][new_col2]
+                                      for new_col1 in [col1, col1+1, col1-1]
+                                      for new_col2 in [col2, col2+1, col2-1]
+                                      if 0 <= new_col1 < n and 0 <= new_col2 < n)
+                    dp[row][col1][col2] = result
+        return dp[0][0][n-1]
 ```
