--- a/algorithm/LeetCode/[Easy] 1539. Kth Missing Positive Number.md
+++ b/algorithm/LeetCode/[Easy] 1539. Kth Missing Positive Number.md
@@ -1,6 +1,6 @@
 1539. Kth Missing Positive Number
 
-Given an array `arr` of positive integers sorted in a strictly increasing order, and an integer `k`.
+Given an array `arr` of positive integers sorted in a **strictly increasing order**, and an integer `k`.
 
 Find the `k`th positive integer that is missing from this array.
 
@@ -87,4 +87,22 @@ public:
         return l + k;
     }
 };
+```
+
+**Solution 3: (Greedy)**
+```
+Runtime: 48 ms
+Memory Usage: 14.5 MB
+```
+```python
+class Solution:
+    def findKthPositive(self, arr: List[int], k: int) -> int:
+        arr = [0] + arr
+        nk = k
+        for a, b in zip(arr[:], arr[1:]):
+            nk -= b-a-1
+            if nk <= 0:
+                return a+k
+            k = nk
+        return arr[-1]+k
 ```
