update LeetCode Weekly Contest 223

--- a/algorithm/LeetCode/[Hard] 1649. Create Sorted Array through Instructions.md
+++ b/algorithm/LeetCode/[Hard] 1649. Create Sorted Array through Instructions.md
@@ -90,3 +90,23 @@ class Solution:
             update(a)
         return res % (10**9 + 7)
 ```
+
+**Solution 2: (Sorted List)**
+```
+Runtime: 6272 ms
+Memory Usage: 29.6 MB
+```
+```python
+from sortedcontainers import SortedList
+
+class Solution:
+    def createSortedArray(self, instructions: List[int]) -> int:
+        SList = SortedList()
+        ans = 0
+        for num in instructions:
+            ans += min(SList.bisect_left(num), len(SList) - SList.bisect_right(num))
+            ans %= (10**9 + 7)
+            SList.add(num)
+
+        return ans
+```
