update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Hard] 1675. Minimize Deviation in Array.md
+++ b/algorithm/LeetCode/[Hard] 1675. Minimize Deviation in Array.md
@@ -44,26 +44,39 @@ Output: 3
 # Submissions
 ---
 **Solution 1: (Heap)**
+
+**Idea**
+
+Observe that we can only increase value (by x2) for odd numbers. That means for an odd number like 3, possible values we can reach are {3, 6}; and for an even number like 8, possible values we can reach are {1, 2, 4, 8}. We can unify both cases by starting from the largest reachable value (6 and 8) and only consider the "//2" (divide by 2) operation.
+
+Since now numbers can only decrease, the only sensible move is to take the largest number and half it. Otherwise, we face the risk of lower the minimum without lowering the maximum.
+
+What data structure should we use? Halving the largest number will surely lower the maximum but would also create a new minimum. So we would like something that would efficiently keep track of both the max and min values. If you browse other posts, you will see people use a binary search tree for this, but a heap / priority queue that only tracks the max value will also suffice for this problem.
+
+This is because, in each step, we will only create a new minimum by halving the current maximum (heap top). So we can keep a variable mi for this and update it along with each operation.
+
+**Optimazations / implementation choices**
+
+* We only need to consider unique values from the input as diverging from the same starting values won't make a solution any better. (heap = list(set(...)))
+* Negate the values to have a max heap.
+* For the current max value, we can just take heap[0].
+* The process ends when it is impossible to reduce the max value, i.e. heap[0] % 2 == 0 does not hold.
+
 ```
-Runtime: 972 ms
-Memory Usage: 26.1 MB
+Runtime: 1032 ms
+Memory Usage: 30.7 MB
 ```
 ```python
 class Solution:
     def minimumDeviation(self, nums: List[int]) -> int:
-        pq = []
-        # Since odd can only be doubled once,
-        # and even can not be doubled.
-        # We can double all odds first.
-        for a in nums:
-            heapq.heappush(pq, -a * 2 if a % 2 else -a)
-        res = float('inf')
-        mi = -max(pq)
-        while len(pq) == len(nums):
-            a = -heapq.heappop(pq)
-            res = min(res, a - mi)
-            if a % 2 == 0:
-                mi = min(mi, a // 2)
-                heapq.heappush(pq, -a // 2)
-        return res
+        heap = list(set(-(x * 2 if x & 1 else x) for x in nums))
+        heapify(heap)
+        ma, mi = -heap[0], -max(heap)
+        ans = ma - mi
+        while heap[0] % 2 == 0:
+            x = heappop(heap) // 2
+            heappush(heap, x)
+            ma, mi = -heap[0], min(mi, -x)
+            ans = min(ans, ma - mi)
+        return ans
 ```
