update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Hard] 1755. Closest Subsequence Sum.md
+++ b/algorithm/LeetCode/[Hard] 1755. Closest Subsequence Sum.md
@@ -55,10 +55,10 @@ class Solution:
     def minAbsDifference(self, nums: List[int], goal: int) -> int:
         
         def fn(nums):
-            ans = {0}
+            rst = {0}
             for x in nums: 
-                ans |= {x + y for y in ans}
-            return ans 
+                rst |= {x + y for y in rst}
+            return rst 
         
         nums0 = sorted(fn(nums[:len(nums)//2]))
         
