--- a/algorithm/LeetCode/[Easy] 1337. The K Weakest Rows in a Matrix.md
+++ b/algorithm/LeetCode/[Easy] 1337. The K Weakest Rows in a Matrix.md
@@ -64,3 +64,14 @@ class Solution:
     def kWeakestRows(self, mat: List[List[int]], k: int) -> List[int]:
         return sorted(range(len(mat)), key=lambda x: sum(mat[x]))[:k]
 ```
+
+**Solution 2: (Array)**
+```python
+Runtime: 104 ms
+Memory Usage: 14.5 MB
+```
+```python
+class Solution:
+    def kWeakestRows(self, mat: List[List[int]], k: int) -> List[int]:
+        return list(zip(*sorted((sum(row), i) for i, row in enumerate(mat))[:k]))[1]
+```
