update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Easy] 1304. Find N Unique Integers Sum up to Zero.md
+++ b/algorithm/LeetCode/[Easy] 1304. Find N Unique Integers Sum up to Zero.md
@@ -50,3 +50,24 @@ class Solution:
         
         return res
 ```
+
+**Solution 2: (Math)**
+```
+Runtime: 0 ms
+Memory Usage: 6.7 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> sumZero(int n) {
+        int sum = 0;
+        vector<int>arr;
+        for(int i = 1 ; i <= n-1 ; i++){
+            sum += i;
+            arr.push_back(i);
+        }
+        arr.push_back(-sum);
+        return arr;
+    }
+};
+```
