update LeetCode Biweekly Contest 50

--- a/algorithm/LeetCode/[Hard] 1074. Number of Submatrices That Sum to Target.md
+++ b/algorithm/LeetCode/[Hard] 1074. Number of Submatrices That Sum to Target.md
@@ -31,77 +31,78 @@ Explanation: The two 1x2 submatrices, plus the two 2x1 submatrices, plus the 2x2
 
 # Submissions
 ---
-**Solution 1: (Sliding Window, Prefix Sum)**
+**Solution 1: (Horizontal 1D Prefix Sum)**
 ```
-Runtime: 3996 ms
-Memory Usage: 19.8 MB
+Runtime: 940 ms
+Memory Usage: 15.2 MB
 ```
 ```python
 class Solution:
     def numSubmatrixSumTarget(self, matrix: List[List[int]], target: int) -> int:
-        if not matrix:
-            return 0
+        r, c = len(matrix), len(matrix[0])
         
-        def num_for_one_row(nums):
-            prev = {}
-            prev[0] = 1
-            cur_sum = 0
-            ans = 0
-            for num in nums:
-                cur_sum += num
-                if cur_sum - target in prev:
-                    ans += prev[cur_sum - target]
-                if cur_sum not in prev:
-                    prev[cur_sum] = 1
-                else:
-                    prev[cur_sum] += 1
-            return ans 
+        # compute 2D prefix sum
+        ps = [[0] * (c + 1) for _ in range(r + 1)]
+        for i in range(1, r + 1):
+            for j in range(1, c + 1):
+                ps[i][j] = ps[i - 1][j] + ps[i][j - 1] - ps[i - 1][j - 1] + matrix[i - 1][j - 1]
         
-        res = 0
-        R = len(matrix)
-        C = len(matrix[0])
-        
-        for k in range(R):
-            col_prefix = [0]*C
-            for i in range(k, R):
-                for j in range(C):
-                    col_prefix[j] += matrix[i][j]
-                res += num_for_one_row(col_prefix)
+        count = 0
+        # reduce 2D problem to 1D one
+        # by fixing two rows r1 and r2 and 
+        # computing 1D prefix sum for all matrices using [r1..r2] rows
+        for r1 in range(1, r + 1):
+            for r2 in range(r1, r + 1):
+                h = defaultdict(int)
+                h[0] = 1
                 
-        return res
+                for col in range(1, c + 1):
+                    # current 1D prefix sum  
+                    curr_sum = ps[r2][col] - ps[r1 - 1][col]
+                    
+                    # add subarrays which sum up to (curr_sum - target)
+                    count += h[curr_sum - target]
+                    
+                    # save current prefix sum
+                    h[curr_sum] += 1
+                    
+        return count
 ```
 
-**Solution 2: (DP Bottom-Up, Prefix Sum)**
-
-Please see and vote for my solution for these similar problems.
-* 560. Subarray Sum Equals K
-* 974. Subarray Sums Divisible by K
-* 325. Maximum Size Subarray Sum Equals k
-* 1074. Number of Submatrices That Sum to Target
-* 363. Max Sum of Rectangle No Larger Than K
-
-For each row, calculate the prefix sum. For each pair of columns, calculate the sum of rows.
-Now this problem is changed to problem 560 Subarray Sum Equals K.
-
+**Solution 2: (Vertical 1D Prefix Sum)**
 ```
-Runtime: 6096 ms
-Memory Usage: 20.9 MB
+Runtime: 884 ms
+Memory Usage: 15.3 MB
 ```
 ```python
 class Solution:
     def numSubmatrixSumTarget(self, matrix: List[List[int]], target: int) -> int:
-        m, n = len(matrix), len(matrix[0])
-        for x in range(m):
-            for y in range(n - 1):
-                matrix[x][y+1] += matrix[x][y]
-        res = 0
-        for y1 in range(n):
-            for y2 in range(y1, n):
-                preSums = {0: 1}
-                s = 0
-                for x in range(m):
-                    s += matrix[x][y2] - (matrix[x][y1-1] if y1 > 0 else 0)
-                    res += preSums.get(s - target, 0)
-                    preSums[s] = preSums.get(s, 0) + 1
-        return res
+        r, c = len(matrix), len(matrix[0])
+        
+        # compute 2D prefix sum
+        ps = [[0] * (c + 1) for _ in range(r + 1)]
+        for i in range(1, r + 1):
+            for j in range(1, c + 1):
+                ps[i][j] = ps[i - 1][j] + ps[i][j - 1] - ps[i - 1][j - 1] + matrix[i - 1][j - 1]
+        
+        count = 0
+        # reduce 2D problem to 1D one
+        # by fixing two columns c1 and c2 and 
+        # computing 1D prefix sum for all matrices using [c1..c2] columns
+        for c1 in range(1, c + 1):
+            for c2 in range(c1, c + 1):
+                h = defaultdict(int)
+                h[0] = 1
+                
+                for row in range(1, r + 1):
+                    # current 1D prefix sum 
+                    curr_sum = ps[row][c2] - ps[row][c1 - 1]
+                    
+                    # add subarrays which sum up to (curr_sum - target)
+                    count += h[curr_sum - target]
+                    
+                    # save current prefix sum
+                    h[curr_sum] += 1
+                    
+        return count
 ```
