update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Hard] 1192. Critical Connections in a Network.md
+++ b/algorithm/LeetCode/[Hard] 1192. Critical Connections in a Network.md
@@ -26,48 +26,36 @@ Explanation: [[3,1]] is also accepted.
 
 # Submissions
 ---
-**Solution 1: (DFS)**
+**Solution 1: (DFS, Tarjan's algorithm)**
 ```
-Runtime: 3184 ms
-Memory Usage: 84.4 MB
+Runtime: 2284 ms
+Memory Usage: 84.9 MB
 ```
 ```python
-from collections import defaultdict
-from typing import Dict
-
 class Solution:
     def criticalConnections(self, n: int, connections: List[List[int]]) -> List[List[int]]:
+        graph = {} # graph as adjacency list 
+        for u, v in connections: 
+            graph.setdefault(u, []).append(v)
+            graph.setdefault(v, []).append(u)
         
-        def adj(connections: List[List[int]]) -> Dict[int, List[int]]:
-            adj_conn = defaultdict(list)
-            for source, target in connections:
-                adj_conn[source].append(target)
-                adj_conn[target].append(source)
-            return adj_conn
-
-        self.adj_conn = adj(connections)
-        self.pre = [-1]*n
-        self.low = [-1]*n
-        self.count = 0
-        self.result = []
+        def dfs(x, p, step): 
+            """Traverse the graph and collect bridges using Tarjan's algo."""
+            disc[x] = low[x] = step
+            for xx in graph.get(x, []): 
+                if disc[xx] == inf: 
+                    step += 1
+                    dfs(xx, x, step)
+                    low[x] = min(low[x], low[xx])
+                    if low[xx] > disc[x]: ans.append([x, xx]) # bridge
+                elif xx != p: low[x] = min(low[x], disc[xx])
         
-        def dfs(source, target):
-            self.pre[target] = self.count
-            self.low[target] = self.pre[target]
-            self.count += 1
-            for neighbor in self.adj_conn[target]:
-                if self.pre[neighbor] == -1:
-                    dfs(target, neighbor)
-                    self.low[target] = min(self.low[target], self.low[neighbor])
-                    if self.pre[neighbor] == self.low[neighbor]:
-                        self.result.append([neighbor, target])
-                elif neighbor != source:
-                    self.low[target] = min(self.low[target], self.pre[neighbor])
+        ans = []
+        low = [inf]*n
+        disc = [inf]*n
         
-        for i in range(n):
-            if self.pre[i] == -1:
-                dfs(i,i)
-        return self.result
+        dfs(0, -1, 0)
+        return ans 
 ```
 
 **Solution 2: (DFS)**
